add taskqueue for pioneer which is more stable with multiple request, e.g. many dockers at the same time fix error of buffer overflow when invoke system commands add version and build time for salsa metadata increase memory for pioneer at bootstrap use thread for message handling which block the pioneer